--- a/package.json
+++ b/package.json
@@ -8,28 +8,23 @@
     "type": "git",
     "url": "https://github.com/atomist/blank-sdm.git"
   },
-  "keywords": [
-    "atomist",
-    "automation",
-    "github",
-    "kubernetes",
-    "sdm"
-  ],
   "homepage": "https://github.com/atomist/blank-sdm#readme",
   "bugs": {
     "url": "https://github.com/atomist/blank-sdm/issues"
   },
+  "keywords": [
+    "atomist",
+    "automation",
+    "sdm",
+    "seed"
+  ],
   "main": "./index.js",
   "types": "./index.d.ts",
   "dependencies": {
-    "@atomist/automation-client": "^0.19.5",
-    "@atomist/sdm": "^0.4.0",
-    "@atomist/sdm-core": "^0.4.0",
-    "@atomist/sdm-pack-spring": "^0.1.8",
-    "@types/dateformat": "^1.0.1",
-    "@types/lodash": "^4.14.108",
-    "dateformat": "^3.0.3",
-    "lodash": "^4.17.10"
+    "@atomist/automation-client": "^0.21.1",
+    "@atomist/sdm": "^0.4.2",
+    "@atomist/sdm-core": "^0.4.2",
+    "@atomist/sdm-local": "^0.1.7"
   },
   "devDependencies": {
     "@types/mocha": "^5.2.5",
@@ -52,24 +47,24 @@
     "test": "test"
   },
   "scripts": {
-    "autostart": "nodemon --watch index.ts,lib --ext ts --exec ts-node -- node_modules/@atomist/automation-client/start.client.js",
+    "autostart": "nodemon --watch index.ts --watch lib --ext ts --delay 4 --exec ts-node -- node_modules/@atomist/automation-client/bin/start.js",
     "autotest": "supervisor --watch index.ts,lib,test --extensions ts --no-restart-on exit --quiet --exec npm -- test",
-    "build": "npm-run-all compile test lint doc",
-    "clean": "npm-run-all clean:compile clean:doc clean:run",
-    "clean:compile": "rimraf build git-info.json \"index.{d.ts,js*}\" \"{lib,test}/**/*.{d.ts,js*}\" lib/typings/types.ts",
-    "clean:dist": "npm-run-all clean clean:npm",
+    "build": "run-s compile test lint doc",
+    "clean": "run-p clean:compile clean:doc clean:run",
+    "clean:compile": "rimraf git-info.json \"index.{d.ts,js{,.map}}\" \"{lib,test}/**/*.{d.ts,js{,.map}}\" lib/typings/types.ts",
+    "clean:dist": "run-s clean clean:npm",
     "clean:doc": "rimraf doc",
     "clean:npm": "rimraf node_modules",
     "clean:run": "rimraf *-v8.log profile.txt log",
-    "compile": "npm-run-all git:info gql:gen compile:ts",
+    "compile": "run-s git:info gql:gen compile:ts",
     "compile:ts": "tsc --project .",
     "doc": "typedoc --mode modules --ignoreCompilerErrors --exclude \"**/*.d.ts\" --out doc index.ts lib",
     "fmt": "tsfmt --replace",
-    "git:info": "atomist git",
-    "gql:gen": "atomist gql-gen --no-install \"lib/**/*.graphql\"",
-    "lint": "tslint --format verbose --project . --exclude \"{build,node_modules}/**\" --exclude \"**/*.d.ts\" \"**/*.ts\"",
+    "git:info": "atm-git-info",
+    "gql:gen": "atm-gql-gen",
+    "lint": "tslint --format verbose --project . --exclude \"node_modules/**\" --exclude \"**/*.d.ts\" \"**/*.ts\"",
     "lint:fix": "npm run lint -- --fix",
-    "start": "atomist start --no-install --no-compile",
+    "start": "atm-start",
     "test": "mocha --require espower-typescript/guess \"test/**/*.test.ts\"",
     "test:one": "mocha --require espower-typescript/guess \"test/**/${TEST:-*.test.ts}\"",
     "typedoc": "npm run doc"
