--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
   "main": "./index.js",
   "types": "./index.d.ts",
   "dependencies": {
-    "@atomist/automation-client": "1.0.0-M.1",
-    "@atomist/sdm": "1.0.0-M.1",
-    "@atomist/sdm-core": "1.0.0-M.1"
+    "@atomist/automation-client": "^1.0.0-master.20180831124448",
+    "@atomist/sdm": "^1.0.0-master.20180901020009",
+    "@atomist/sdm-core": "^1.0.0-master.20180831224322"
   },
   "devDependencies": {
-    "@atomist/sdm-local": "1.0.0-M.1",
+    "@atomist/sdm-local": "^1.0.0-master.20180831185416",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.5.7",
     "@types/power-assert": "^1.5.0",
