--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
   "main": "./index.js",
   "types": "./index.d.ts",
   "dependencies": {
-    "@atomist/automation-client": "1.0.0-M.5a",
-    "@atomist/sdm": "1.0.0-M.5",
-    "@atomist/sdm-core": "1.0.0-M.5"
+    "@atomist/automation-client": "1.0.0-master.20181010204819",
+    "@atomist/sdm": "1.0.0-master.20181010145707",
+    "@atomist/sdm-core": "1.0.0-master.20181011053254"
   },
   "devDependencies": {
-    "@atomist/sdm-local": "1.0.0-M.5",
+    "@atomist/sdm-local": "1.0.0-master.20181011201306",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.5.7",
     "@types/power-assert": "^1.5.0",
