--- a/assets/kubectl/sdm.yaml
+++ b/assets/kubectl/sdm.yaml
@@ -2,20 +2,20 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: sdm
   labels:
     owner: atomist
+  name: sdm
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: sdm-serviceaccount
+  name: empty-sdm
   namespace: sdm
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: Role
 metadata:
-  name: sdm-role
+  name: empty-sdm
   namespace: sdm
 rules:
   - apiGroups: [""]
@@ -31,78 +31,72 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: RoleBinding
 metadata:
-  name: sdm-role-binding
+  name: empty-sdm
   namespace: sdm
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: sdm-role
+  name: empty-sdm
 subjects:
   - kind: ServiceAccount
-    name: sdm-serviceaccount
+    name: empty-sdm
     namespace: sdm
 ---
 kind: Deployment
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 metadata:
   name: empty-sdm
   namespace: sdm
   labels:
-    app: empty-sdm
+    app.kubernetes.io/name: empty-sdm
 spec:
-  replicas: 1
-  revisionHistoryLimit: 3
   selector:
     matchLabels:
-      app: empty-sdm
+      app.kubernetes.io/name: empty-sdm
   template:
     metadata:
       labels:
-        app: empty-sdm
+        app.kubernetes.io/name: empty-sdm
         version: "0"
     spec:
-      serviceAccountName: sdm-serviceaccount
       containers:
-      - name: empty-sdm
-        image: atomist-seeds/empty-sdm:1.0.0
-        imagePullPolicy: IfNotPresent
-        env:
-        - name: ATOMIST_DEPLOYMENT_NAMESPACE
+      - env:
+        - name: ATOMIST_CONFIG_PATH
+          value: /opt/atm/client.config.json
+        - name: ATOMIST_GOAL_LAUNCHER
+          value: kubernetes
+        - name: ATOMIST_POD_NAMESPACE
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        - name: NODE_ENV
-          value: production
         - name: FORCE_COLOR
           value: "1"
-        - name: ATOMIST_GOAL_LAUNCHER
-          value: kubernetes
-        - name: ATOMIST_CONFIG_PATH
-          value: /opt/atm/client.config.json
+        image: atomist-seeds/empty-sdm:1.0.0
+        name: empty-sdm
         ports:
-        - name: http
-          containerPort: 2866
+        - containerPort: 2866
+          name: http
           protocol: TCP
         livenessProbe:
+          failureThreshold: 3
           httpGet:
             path: "/health"
             port: 2866
             scheme: HTTP
           initialDelaySeconds: 20
-          timeoutSeconds: 3
           periodSeconds: 20
           successThreshold: 1
-          failureThreshold: 3
+          timeoutSeconds: 3
         readinessProbe:
+          failureThreshold: 3
           httpGet:
             path: "/health"
             port: 2866
             scheme: HTTP
           initialDelaySeconds: 20
-          timeoutSeconds: 3
           periodSeconds: 20
           successThreshold: 1
-          failureThreshold: 3
+          timeoutSeconds: 3
         resources:
           limits:
             cpu: 1000m
@@ -111,18 +105,16 @@ spec:
             cpu: 100m
             memory: 384Mi
         volumeMounts:
-        - name: automation
-          mountPath: /opt/atm
+        - mountPath: /opt/atm
+          name: automation
           readOnly: true
+      serviceAccountName: empty-sdm
       volumes:
-      - name: automation
+      - name: empty-sdm
         secret:
-          secretName: automation
-      restartPolicy: Always
-      terminationGracePeriodSeconds: 30
-      dnsPolicy: ClusterFirst
+          secretName: empty-sdm
   strategy:
-    type: RollingUpdate
     rollingUpdate:
-      maxUnavailable: 0
       maxSurge: 1
+      maxUnavailable: 0
+    type: RollingUpdate
