convert from pre 2 sdm to 2+. Somewhat vexatious

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,16 +16,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "include": [
-    "index.ts",
-    "commands/**/*.ts",
-    "events/**/*.ts",
-    "goals/**/*.ts",
-    "tests/**/*.ts",
-    "bin/*.ts",
-    "lib/**/*.ts",
-    "test/**/*.ts",
-  ],
+  "include": ["index.ts", "bin/*.ts", "lib/**/*.ts", "test/**/*.ts"],
   "exclude": [".#*"],
   "compileOnSave": true,
   "buildOnSave": false,
