--- a/package.json
+++ b/package.json
@@ -1,20 +1,14 @@
 {
-  "name": "@atomist-seeds/empty-sdm",
+  "name": "kludge-works~mote",
   "version": "1.0.0",
-  "description": "An empty SDM to use as a starting point for your own software delivery machine",
+  "description": "pokey stuff",
   "author": {
-    "name": "Atomist",
-    "email": "support@atomist.com",
-    "url": "https://atomist.com/"
+    "name": "Tim Sparg"
   },
   "license": "Apache-2.0",
-  "homepage": "https://github.com/atomist-seeds/empty-sdm#readme",
   "repository": {
     "type": "git",
-    "url": "https://github.com/atomist-seeds/empty-sdm.git"
-  },
-  "bugs": {
-    "url": "https://github.com/atomist-seeds/empty-sdm/issues"
+    "url": "git@github.com:kludge-works/mote.git"
   },
   "keywords": [
     "atomist",
@@ -25,31 +19,35 @@
   "main": "./index.js",
   "types": "./index.d.ts",
   "dependencies": {
-    "@atomist/automation-client": "1.8.0-master.20191107225525",
-    "@atomist/sdm": "1.8.0-dynamic-goals.20191108140247",
-    "@atomist/sdm-core": "1.8.0-dynamic-goals.20191108152504"
+    "@atomist/sdm": "2.0.0-master.20200703143927",
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
-    "@atomist/sdm-local": "1.2.2-master.20191011215150",
+    "@types/lodash": "^4.14.144",
     "@types/mocha": "^5.2.7",
     "@types/power-assert": "^1.5.0",
+    "@typescript-eslint/eslint-plugin": "^3.4.0",
+    "@typescript-eslint/parser": "^3.4.0",
+    "eslint": "^7.3.1",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "espower-typescript": "^9.0.2",
-    "mocha": "^6.2.2",
+    "mocha": "^6.2.1",
     "npm-run-all": "^4.1.5",
     "power-assert": "^1.6.1",
+    "prettier": "^2.0.5",
     "rimraf": "^3.0.0",
     "supervisor": "^0.12.0",
-    "ts-node": "^8.4.1",
-    "tslint": "^5.20.1",
-    "typedoc": "^0.15.0",
-    "typescript": "^3.7.2"
+    "ts-node": "^8.10.2",
+    "typedoc": "^0.17.7",
+    "typescript": "^3.9.5"
   },
   "directories": {
     "test": "test"
   },
   "scripts": {
     "autotest": "supervisor --watch index.ts,lib,test --extensions ts --no-restart-on exit --quiet --exec npm -- test",
-    "build": "run-s compile test lint doc",
+    "build": "run-s clean compile test lint doc",
     "clean": "run-p clean:compile clean:test clean:doc clean:run",
     "clean:compile": "rimraf git-info.json \"index.{d.ts,js}{,.map}\" \"{lib,test}/**/*.{d.ts,js}{,.map}\" lib/typings/types.ts",
     "clean:dist": "run-s clean clean:npm",
@@ -62,12 +60,11 @@
     "doc": "typedoc --mode modules --excludeExternals --ignoreCompilerErrors --exclude \"**/*.d.ts\" --out doc index.ts lib",
     "git:info": "atm-git-info",
     "gql:gen": "atm-gql-gen",
-    "lint": "tslint --config tslint.json --format verbose --project .",
+    "lint": "eslint --ext .ts .",
     "lint:fix": "npm run lint -- --fix",
     "start": "atm-start",
     "test": "mocha --require espower-typescript/guess \"test/**/*.test.ts\"",
-    "test:one": "mocha --require espower-typescript/guess \"test/**/${TEST:-*.test.ts}\"",
-    "typedoc": "npm run doc"
+    "test:one": "mocha --require espower-typescript/guess \"test/**/${TEST:-*.test.ts}\""
   },
   "engines": {
     "node": ">=8.2.0",
